navbar correction of z-index

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -124,9 +124,9 @@
       width: 100%;
       border-radius: 3em;
       position: absolute;
-      top: calc(100% + 10px);
+      top: calc(100% + 5px);
       left: 0;
-      z-index: 1;
+      z-index: 10;
 
       li{
         padding: 15px;
@@ -136,7 +136,7 @@
         }
       }
       select {
-        padding: 1.5em;
+        padding: 1.5em 0em 1.5em 0em;
         display: block;
         margin: auto;
         appearance: none;
