--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -533,9 +533,9 @@
   width: 100%;
   border-radius: 3em;
   position: absolute;
-  top: calc(100% + 10px);
+  top: calc(100% + 5px);
   left: 0;
-  z-index: 1;
+  z-index: 10;
 }
 .mobNavbarMenu .openCloseIcon .mobSubMenu li {
   padding: 15px;
@@ -545,7 +545,7 @@
   text-decoration: none;
 }
 .mobNavbarMenu .openCloseIcon .mobSubMenu select {
-  padding: 1.5em;
+  padding: 1.5em 0em 1.5em 0em;
   display: block;
   margin: auto;
   -webkit-appearance: none;
